hphp/test/zend/good/ext-standard-strings/bug61374.php
<?php
echo html_entity_decode('&OElig;', 0, 'ISO-8859-1');